--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,158 @@
 body {
   margin: 0;
+  text-align: center;
+  font-family: verdana, sans-serif;
+  font-size: 200%;
 }
 
 h1 {
-  margin-top: 0;
+  margin: 2.6rem auto 0 auto;
+  font-family: 'Sacramento', cursive;
+  font-size: 5.625rem;
+  color: #66BFBF;
+}
+h2 {
+  font-family: 'Merriweather', serif;
+  font-size: 2rem;
+  color: #66BFBF;
+  font-weight: normal;
+}
+
+p {
+  font-family: 'Merriweather', serif;
+  font-size: 1rem;
+  color: #40514e;
+  line-height: 2;
+}
+
+h3 {
+  font-family: 'Merriweather', serif;
+  font-size: 1.2rem;
+  color: #11999E;
+}
+
+hr {
+  color: #fd3a69;
+  width: 5%;
+  border: 2px dotted;
+  border-bottom: 0;
+}
+
+a:hover {
+  color: #eaf6f6;
+}
+
+.profile img {
+  width: 18rem;
 }
 
 .top-container {
-  background-color: #08d9d6;
+  background-color: #eaf6f6;
+  position: relative;
+  padding-top: 100px;
 }
 
-.middle-container {
-  height: 200px;
-  width: 200px;
-  background-color: #ff2e63;
+.profile {
+  margin: 100px auto 100px;
+}
+
+.skill-row {
+  margin: 100px auto 100px auto;
+  width: 50%;
+  text-align: left;
+  line-height: 2;
+}
+
+.code-img {
+  width: 25%;
+  float: left;
+  margin-right: 30px;
+}
+
+.chili-img {
+  width: 25%;
+  float: right;
+  margin-right: 30px;
 }
 
 .bottom-container {
-  height: 200px;
-  width: 200px;
-  background-color: #252a34;
+  background-color: #66BFBF;
+  position: relative;
+  padding: 50px 0 30px 0;
+}
+
+.top-cloud {
+  position: absolute;
+  right: 300px;
+  top: 50px;
+}
+
+.bottom-cloud {
+  position: absolute;
+  left: 300px;
+  bottom: 300px;
+}
+
+.pro {
+  text-decoration: underline;
+}
+
+.bottom-container a {
+  margin: 0 20px 0 20px;
+  color: #11999E;
+  text-decoration: none;
+  font-family: 'Merriweather', serif;
+}
+
+.BUTTON_QIX {
+  background: #00FFDB;
+  background-image: -webkit-linear-gradient(top, #00FFDB, #48FFDD);
+  background-image: -moz-linear-gradient(top, #00FFDB, #48FFDD);
+  background-image: -ms-linear-gradient(top, #00FFDB, #48FFDD);
+  background-image: -o-linear-gradient(top, #00FFDB, #48FFDD);
+  background-image: -webkit-gradient(to bottom, #00FFDB, #48FFDD);
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  border-radius: 20px;
+  color: #FFFFFF;
+  font-family: Open Sans;
+  font-size: 20px;
+  font-weight: 100;
+  padding: 20px;
+  -webkit-box-shadow: 1px 1px 20px 0 #000000;
+  -moz-box-shadow: 1px 1px 20px 0 #000000;
+  box-shadow: 1px 1px 20px 0 #000000;
+  text-shadow: 1px 1px 20px #000000;
+  border: solid #337FED 1px;
+  text-decoration: none;
+  display: inline-block;
+  cursor: pointer;
+  text-align: center;
+}
+
+.BUTTON_QIX:hover {
+  border: solid #00FFCF 1px;
+  background: #3DF663;
+  background-image: -webkit-linear-gradient(top, #3DF663, #1ED096);
+  background-image: -moz-linear-gradient(top, #3DF663, #1ED096);
+  background-image: -ms-linear-gradient(top, #3DF663, #1ED096);
+  background-image: -o-linear-gradient(top, #3DF663, #1ED096);
+  background-image: -webkit-gradient(to bottom, #3DF663, #1ED096);
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  border-radius: 20px;
+  text-decoration: none;
+}
+
+.contact-me {
+  margin: 100px auto;
+}
+
+.contact-me a{
+  margin-top: 40px;
+}
+
+.bottom-container p {
+  color: #eaf6f6;
+  padding: 30px 0 10px;
 }
